--- a/index.ipynb
+++ b/index.ipynb
@@ -745,13 +745,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "def derivative_of(list_of_terms, x_value, delta_x):\n",
     "    delta = delta_f(list_of_terms, x_value, delta_x)\n",
-    "    return round(delta/delt)"
+    "    return round(delta/delta_x, 3)"
    ]
   },
   {
